# rash-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/data/: blog_posts.rs  mod.rs  projects.rs  resume.rs  skills.rs
static/css/: custom.css
templates/: base.html  index.html  plotter.html  projects.html  resume.html  skills.html
templates/blog/: index.html  post.html
