[package]
name = "kprsnt-portfolio"
version = "0.1.0"
edition = "2021"
description = "Portfolio website built with Rust + Actix-web"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
