[package]
name = "kprsnt-portfolio"
version = "0.1.0"
edition = "2021"
description = "Portfolio website built with Rust + Actix-web"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
